<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.capstone.sm.patient.PatientActivity" >

    <TextView
        android:id="@+id/idTextViewDoctorSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTextViewDoctorSetting" />
    
        <EditText
        android:id="@+id/idEditTextHostAddressSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/idTextViewDoctorSetting" 
        android:layout_alignParentLeft="true"    
        android:layout_marginTop="34dp"
        android:hint="@string/labelTextViewHostAddressSetting" /> 
        <requestFocus />    
    
    <EditText
        android:id="@+id/idEditTextDoctorSettingUpdateFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/idEditTextHostAddressSetting" 
        android:layout_alignParentLeft="true"    
        android:layout_marginTop="34dp"
        android:hint="@string/labelEditTextDoctorSettingUpdateFrequency" 
        android:inputType="number" > 

    </EditText>    
    
        <Button
        android:id="@+id/idButtonDoctorSettingStartUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditTextDoctorSettingUpdateFrequency"        
        android:layout_alignParentLeft="true"    
        android:layout_marginTop="34dp"
        android:text="@string/labelButtonDoctorSettingStartUpdate" />
        
        <Button
        android:id="@+id/idButtonDoctorSettingStopUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditTextDoctorSettingUpdateFrequency"        
        android:layout_alignParentRight="true"    
        android:layout_marginTop="34dp"
        android:text="@string/labelButtonDoctorSettingStopUpdate" />
                
        <TextView
        android:id="@+id/idTextViewDoctorSettingUpdateIsRunning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/idButtonDoctorSettingStartUpdate" 
        android:layout_alignParentLeft="true"    
        android:layout_marginTop="34dp"
        android:hint="@string/labelTextViewDoctorSettingUpdateIsRunning"  /> 
                
        <Button
        android:id="@+id/idButtonDoctorSettingSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTextViewDoctorSettingUpdateIsRunning"        
        android:layout_alignParentLeft="true"
        android:layout_marginTop="34dp"
        android:text="@string/labelButtonDoctorSettingSave" />

        
</RelativeLayout>