<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.capstone.sm.SignUpActivity" >

    <TextView
        android:id="@+id/textViewSignUpAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewSignUp" />
    
    <EditText
        android:id="@+id/editTextSignUpUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/textViewSignUpAction" 
        android:ems="10"
        android:hint="@string/textUserName" 
        android:inputType="text" > 
        
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editTextSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textPassword" 
        android:inputType="textPassword" 
        android:layout_below="@id/editTextSignUpUserName" /> 
    
    <Spinner
        android:id="@+id/spinnerSignUpUserType"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
        android:ems="10"
        android:hint="@string/textUserType" 
        android:inputType="number" 
        android:layout_below="@id/editTextSignUpPassword" /> 
    
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerSignUpUserType"        
        android:layout_alignParentLeft="true"    
        android:layout_marginTop="34dp"
        android:text="@string/textSave" 
        android:onClick="buttonSaveClicked" />
    
</RelativeLayout>
