<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.capstone.sm.SignInActivity" >

    <TextView
        android:id="@+id/textViewSignInAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewSignIn" />
    
    <EditText
        android:id="@+id/editTextSignInUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/textViewSignInAction" 
        android:hint="@string/textUserName" 
        android:inputType="text" > 
        
        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editTextSignInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textPassword" 
        android:inputType="textPassword" 
        android:layout_below="@id/editTextSignInUserName" /> 
    
    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextSignInPassword"        
        android:layout_alignParentLeft="true"    
        android:layout_marginTop="34dp"
        android:text="@string/textSignIn" 
        android:onClick="buttonSignInClicked" />
    
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextSignInPassword"    
        android:layout_alignParentRight="true"   
        android:layout_marginTop="34dp"
        android:text="@string/labelButtonSignUp" 
        android:onClick="buttonSignUpClicked" />

</RelativeLayout>
